# TWA-OSS

./: .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERGUIDETWA.md  DEVELOPER_GUIDE.md  DOCUMENTATION.md  DeveloperGuide.md  DeveloperGuideBackEnd  Developer_Guide.md  Dockerfile  LICENSE  License_twa.md  README.md  RULES.md  TWA_LICENSE.md  TWA_License  UserGuide.md  api-contract.md  docker-compose.authsdk.local.yml  docker-compose.yml  eslint.config.js  implementation-guide.md  package-lock.json  package.json  project.md  seed.js  server.js  userdocumentation.md  vitest.config.ts
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/audit/: __init__.py  service.py
backend/app/core/: auth.py  config.py  docs.py  exceptions.py  logging.py  middleware.py  responses.py
backend/app/db/: base.py  seed.py  seeds.py  session.py
backend/app/models/: __init__.py  app_user.py  application.py  audit_log.py  employer.py  enums.py  job_listing.py  jobseeker.py  mixins.py  notification.py  notification_config.py
backend/app/routers/: __init__.py  health.py
backend/app/schemas/: __init__.py  admin.py  applications.py  auth.py  employer.py  health.py  jobseeker.py  matching.py  meta.py  normalization.py  notifications.py
backend/migrations/: env.py
backend/tests/: test_admin_audit.py  test_applications_workflow.py  test_auth.py  test_auth_middleware.py  test_config.py  test_container_assets.py  test_db_schema.py  test_docs_exposure.py  test_employer_workflow.py  test_escape_like.py  test_health.py  test_infrastructure.py  test_jobseeker_workflow.py  test_location_services.py  test_matching.py  test_notifications_service.py  test_notifications_stream.py  test_notifications_workflow.py  test_phase10_applications_workflow.py  test_phase11_notifications.py  test_phase12_admin_audit.py  test_phase15_auth_middleware.py  test_phase6_employer_workflow.py  test_phase7_jobseeker_workflow.py  test_phase8_location_services.py  test_phase9_matching.py
twa/: TWA  (+5 more)
(+241 files in other folders)
