[project]
name = "twa-backend"
version = "0.1.0"
description = "FastAPI backend for the TWA application"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.4",
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.9",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false