[project]
name = "twa-backend"
version = "0.1.0"
description = "FastAPI backend for the TWA application"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.4",
  "auth-service-sdk @ git+https://github.com/chintakjoshi/authSDK.git@b8a05c17a4ffd045087c12db741cfd9a0df57c27#subdirectory=sdk",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pgeocode>=0.5.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.9",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
