[project]
name = "twa-backend"
version = "0.1.0"
description = "FastAPI backend for the TWA application"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.4",
  "auth-service-sdk @ git+https://github.com/chintakjoshi/authSDK.git@v1.5.1#subdirectory=sdk",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pgeocode>=0.5.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.9",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "black>=26.3.1",
  "pytest>=8.4.1",
  "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv]
package = false
